[gd_scene load_steps=10 format=3 uid="uid://cy1x56tkrj3o3"]

[ext_resource type="Texture2D" uid="uid://cyeaggfquxqmq" path="res://arts/seeker.png" id="1_h2q5g"]
[ext_resource type="Script" uid="uid://coy5yosnqni8a" path="res://scripts/seeker_attack.gd" id="1_hxvs6"]
[ext_resource type="Script" uid="uid://bjs1rn3do52ws" path="res://scripts/attack.gd" id="2_w6a5l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w6a5l"]
atlas = ExtResource("1_h2q5g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxvs6"]
atlas = ExtResource("1_h2q5g")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6fom7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6a5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxvs6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h2q5g"]
radius = 57.1402

[sub_resource type="CircleShape2D" id="CircleShape2D_ufptn"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hxvs6"]
radius = 14.0

[node name="SeekerAttack" type="CharacterBody2D"]
script = ExtResource("1_hxvs6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6fom7")
autoplay = "default"
frame = 1
frame_progress = 0.938129

[node name="EnemiesSeekingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemiesSeekingArea"]
shape = SubResource("CircleShape2D_h2q5g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ufptn")

[node name="Attack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_w6a5l")
metadata/_custom_type_script = "uid://bjs1rn3do52ws"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
shape = SubResource("CircleShape2D_hxvs6")

[node name="SeekingTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="SeekingTimer" to="." method="_on_seeking_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
